cmake_minimum_required(VERSION 3.23)
project(Secventa_numere_pare)

set(CMAKE_CXX_STANDARD 14)

add_executable(Secventa_numere_pare
        .idea/.gitignore
        .idea/modules.xml
        ".idea/Secventa numere pare.iml"
        .idea/workspace.xml
        main.cpp
        "Secventa numere pare.cbp"
        "Secventa numere pare.layout")
